Fixed a scroll-x problem with code samples being too wide on mobile. Added a new blog post!

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -15,6 +15,7 @@
   }
 
   .main {
+    max-width: 100vw;
     padding: $default-spacing;
   }
 
